--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,8 +25,8 @@ html {
   font-family: var(--font-dm-sans);
   background-image: linear-gradient(
     90deg,
-    rgb(147, 90, 255) 35%,
-    rgb(255, 34, 101) 100%
+    rgb(99 102 241) 25%,
+    rgb(255, 118, 90) 100%
   );
   -webkit-text-stroke-color: transparent;
   background-clip: text;
@@ -65,4 +65,17 @@ body {
   .burger-menu-span--negative {
     transform: rotate(-45deg) translate(0, -6px);
   }
+}
+
+.gradient-underline {
+  background-image: linear-gradient(
+    90deg,
+    rgb(99 102 241) 25%,
+    rgb(255, 118, 90) 100%
+  );
+  background-size: 100% 2px;
+  background-repeat: no-repeat;
+  background-position: center 45px;
+  height: 48px;
+  transition: background-size 300ms ease-in-out;
 }
