--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,79 +3,91 @@
 @tailwind utilities;
 
 :root {
-  --background-default: 250, 250, 250;
+    --background-default: 250, 250, 250;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background-default: 18, 18, 18;
-  }
+    :root {
+        --background-default: 18, 18, 18;
+    }
 }
 
 html {
-  font-family: var(--font-montserrat);
-  scroll-behavior: smooth;
+    font-family: var(--font-montserrat);
+    scroll-behavior: smooth;
 }
 
 #header-logo {
-  font-family: var(--font-roboto-mono);
+    font-family: var(--font-roboto-mono);
 }
 
 #logo-span {
-  font-family: var(--font-dm-sans);
-  background-image: linear-gradient(
-    90deg,
-    rgb(99 102 241) 25%,
-    rgb(255, 118, 90) 100%
-  );
-  -webkit-text-stroke-color: transparent;
-  background-clip: text;
-  -webkit-background-clip: text;
+    font-family: var(--font-dm-sans);
+    background-image: linear-gradient(
+            90deg,
+            rgb(99 102 241) 25%,
+            rgb(255, 118, 90) 100%
+    );
+    -webkit-text-stroke-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
 }
 
 body {
-  background-color: rgb(var(--background-default));
+    background-color: rgb(var(--background-default));
 }
 
 .global-container {
-  margin: auto 7vw;
+    margin: auto 7vw;
 }
 
 @media screen and (min-width: 1280px) {
-  .global-container {
-    margin: auto 9vw;
-  }
+    .global-container {
+        margin: auto 9vw;
+    }
 }
+
 @media screen and (min-width: 1366px) {
-  .global-container {
-    margin: auto 12vw;
-  }
+    .global-container {
+        margin: auto 12vw;
+    }
 }
 
 @media screen and (min-width: 1920px) {
-  .global-container {
-    margin: auto 16vw;
-  }
+    .global-container {
+        margin: auto 16vw;
+    }
 }
 
 @layer components {
-  .burger-menu-span {
-    transform: rotate(45deg) translate(0, 6px);
-  }
-  .burger-menu-span--negative {
-    transform: rotate(-45deg) translate(0, -6px);
-  }
+    .burger-menu-span {
+        transform: rotate(45deg) translate(0, 6px);
+    }
+
+    .burger-menu-span--negative {
+        transform: rotate(-45deg) translate(0, -6px);
+    }
 }
 
 .gradient-underline {
-  background-image: linear-gradient(
-    90deg,
-    rgb(99 102 241) 25%,
-    rgb(255, 118, 90) 100%
-  );
-  background-size: 100% 2px;
-  background-repeat: no-repeat;
-  background-position: center 45px;
-  height: 48px;
-  transition: background-size 300ms ease-in-out;
+    background-image: linear-gradient(
+            90deg,
+            rgb(99 102 241) 25%,
+            rgb(255, 118, 90) 100%
+    );
+    background-size: 100% 2px;
+    background-repeat: no-repeat;
+    background-position: center 45px;
+    height: 48px;
+    transition: background-size 300ms ease-in-out;
+}
+
+.tooltip-arrow {
+    position: absolute;
+    top: -16px; /* Ajuste a posição vertical da seta */
+    left: 50%;
+    transform: translateX(-50%);
+    border-width: 8px; /* Tamanho da seta */
+    border-style: solid;
+    border-color: transparent transparent rgb(63 63 70) transparent; /* Cor da seta */
 }
