--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
+@import '../components/InfiniteCarousel/styles.css';
+@import '../components/Tooltip/styles.css';
+@import '../ui/Section/styles.css';
+
 @tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 :root {
     --background-default: 250, 250, 250;
@@ -59,35 +61,13 @@ body {
     }
 }
 
-@layer components {
-    .burger-menu-span {
-        transform: rotate(45deg) translate(0, 6px);
-    }
-
-    .burger-menu-span--negative {
-        transform: rotate(-45deg) translate(0, -6px);
-    }
+.burger-menu-span {
+transform: rotate(45deg) translate(0, 6px);
 }
 
-.gradient-underline {
-    background-image: linear-gradient(
-            90deg,
-            rgb(99 102 241) 25%,
-            rgb(255, 118, 90) 100%
-    );
-    background-size: 100% 2px;
-    background-repeat: no-repeat;
-    background-position: center 45px;
-    height: 48px;
-    transition: background-size 300ms ease-in-out;
+.burger-menu-span--negative {
+transform: rotate(-45deg) translate(0, -6px);
 }
 
-.tooltip-arrow {
-    position: absolute;
-    top: -16px; /* Ajuste a posição vertical da seta */
-    left: 50%;
-    transform: translateX(-50%);
-    border-width: 8px; /* Tamanho da seta */
-    border-style: solid;
-    border-color: transparent transparent rgb(63 63 70) transparent; /* Cor da seta */
-}
+@tailwind components;
+@tailwind utilities;
