feat: change custom tailwind themes nad improve accessibility

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,18 +1,11 @@
+@import '../components/Sections/Presentation/index.css';
+@import '../components/ArrowDown/index.css';
 @import '../components/InfiniteCarousel/styles.css';
 @import '../components/Tooltip/styles.css';
 @import '../ui/Section/styles.css';
+@import '../ui/Header/index.css';
 
 @tailwind base;
-
-:root {
-    --background-default: 250, 250, 250;
-}
-
-@media (prefers-color-scheme: dark) {
-    :root {
-        --background-default: 18, 18, 18;
-    }
-}
 
 html {
     font-family: var(--font-montserrat);
@@ -21,18 +14,6 @@ html {
 
 #header-logo {
     font-family: var(--font-roboto-mono);
-}
-
-#logo-span {
-    font-family: var(--font-dm-sans);
-    background-image: linear-gradient(
-            90deg,
-            rgb(99 102 241) 25%,
-            rgb(255, 118, 90) 100%
-    );
-    -webkit-text-stroke-color: transparent;
-    background-clip: text;
-    -webkit-background-clip: text;
 }
 
 body {
@@ -59,14 +40,6 @@ body {
     .global-container {
         margin: auto 16vw;
     }
-}
-
-.burger-menu-span {
-transform: rotate(45deg) translate(0, 6px);
-}
-
-.burger-menu-span--negative {
-transform: rotate(-45deg) translate(0, -6px);
 }
 
 @tailwind components;
