--- a/src/components/Sections/Presentation/index.css
+++ b/src/components/Sections/Presentation/index.css
@@ -1,9 +1,13 @@
-#logo-span {
+.logo, .logo--variant {
   @apply bg-gradient-to-r from-primary from-15% to-secondary bg-clip-text;
   font-family: var(--font-dm-sans);
   -webkit-text-stroke-color: transparent;
 }
 
-.dark #logo-span {
+.dark .logo {
   -webkit-text-stroke-width: calc(1em / 16);
+}
+
+.dark .logo--variant {
+  -webkit-text-stroke-color: transparent;
 }
